--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
             <aside class="login-section">
                 <h3>Log in or Sign up:</h3>
                 <form action="your_form_handler_url" method="post" class="login-form">
-                    <label for="username">Username:</label><br>
-                    <input type="text" id="username" name="username"><br>
-                    <label for="password">Password:</label><br>
-                    <input type="password" id="password" name="password"><br>
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password">
+                    <label for="sign-up">Sign up</label>
                     <input type="radio" id="sign-up" name="sign" value="sign-up">
-                    <label for="sign-up">Sign up</label><br>
-                    <input type="radio" id="log-in" name="sign" value="log-in">
-                    <label for="log-in">Log in</label><br><br>
+                    <label for="log-in">Log in</label>
+                    <input type="radio" id="log-in" name="sign" value="log-in"><br>
                     <input type="submit" value="Submit">
                 </form>
             </aside>
@@ -77,4 +77,3 @@
     </footer>
 </body>
 </html>
-
