--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <ul class="nav-links">
                 <li><a href="http://darthalexus.com">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#connect">Connect</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <!--<li><a href="#connect">Connect</a></li>
+                <li><a href="#contact">Contact</a></li>-->
             </ul>
         </nav>
     </header>
