--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DarthAlexus</title>
+    <title>About</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="http://darthalexus.com">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="#about">About</a></li>
                 <!--<li><a href="#connect">Connect</a></li>
                 <li><a href="#contact">Contact</a></li>-->
             </ul>
@@ -30,32 +30,19 @@
             <div class="about-content">
                 <img src="jerry.png" alt="Profile Picture" class="profile-img">
                 <div class="about-text">
-                    <h3>My name is DarthAlexus.</h3>
+                    <h3>Hi</h3>
                     <p>
                         This website is unfortunately currently under construction.<br>
-                        The renewed site will launch in summer 2024.
+                        <br>
+                        Who knows if there will ever be a real website.. 
                     </p>
                 </div>
             </div>
-            <aside class="login-section">
-                <h3>Log in or Sign up:</h3>
-                <form action="your_form_handler_url" method="post" class="login-form">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password">
-                    <label for="sign-up">Sign up</label>
-                    <input type="radio" id="sign-up" name="sign" value="sign-up">
-                    <label for="log-in">Log in</label>
-                    <input type="radio" id="log-in" name="sign" value="log-in"><br>
-                    <input type="submit" value="Submit">
-                </form>
-            </aside>
         </section>
         
         <section id="connect" class="connect-section">
-            <h3>Connect with me:</h3>
             <div class="social-links">
+                
                 <a href="http://open.spotify.com/user/1132953857" target="_blank">
                     <img src="spotify_logo.png" alt="Spotify" class="social-icon">
                 </a>
