modify main page text

--- a/index.html
+++ b/index.html
@@ -32,8 +32,12 @@
                 <div class="about-text">
                     <h3>My name is DarthAlexus.</h3>
                     <p>
-                        This website is unfortunately currently under construction.<br>
-                        The renewed site will launch in summer 2024.
+                        This website is a little joke project of mine.<br>
+                        <br>
+                        It's whole purpose - for now - is providing a platform for me <br>
+                        to experiment around with some simple web programming stuff.
+                        
+                        
                     </p>
                 </div>
             </div>
