--- a/about.html
+++ b/about.html
@@ -18,7 +18,8 @@
             </div>
             <ul class="nav-links">
                 <li><a href="http://darthalexus.com">Home</a></li>
-                <li><a href="">About</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="random.html">Random</a></li>
                 <!--<li><a href="#connect">Connect</a></li>
                 <li><a href="#contact">Contact</a></li>-->
             </ul>
