--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="nav-links">
                 <li><a href="http://darthalexus.com">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="random.html">Random</a></li>
+                <li><a href="jerry.html">Jerry</a></li>
                 <!--<li><a href="#connect">Connect</a></li>
                 <li><a href="#contact">Contact</a></li>-->
             </ul>
