--- a/FullBody_RoboPianist/index.html
+++ b/FullBody_RoboPianist/index.html
@@ -38,7 +38,7 @@
 <body>
 
   <video autoplay muted loop playsinline>
-    <source src="assets/videos/highres-video.mp4" type="video/mp4" />
+    <source src="my_favorite_things.mp4" type="video/mp4" />
     Your browser does not support the video tag.
   </video>
 
