--- a/FullBody_RoboPianist/index.html
+++ b/FullBody_RoboPianist/index.html
@@ -43,8 +43,8 @@
   </video>
 
   <div class="content">
-    <h1>Welcome to the Video Page</h1>
-    <p>Enjoy the fullscreen video experience.</p>
+    <h1>Welcome to the Full-Body RoboPianist</h1>
+    <p>Enjoy 'My Favorite Things'</p>
   </div>
 
 </body>
