--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="http://darthalexus.com">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="jerry.html">Jerry</a></li>
+                <li><a href="FullBody_RoboPianist/index.html">Full-Body-Robopianist</a></li>
                 <!--<li><a href="#connect">Connect</a></li>
                 <li><a href="#contact">Contact</a></li>-->
             </ul>
