--- a/FullBody_RoboPianist/index.html
+++ b/FullBody_RoboPianist/index.html
@@ -57,7 +57,7 @@
   </video>
   
   <div class="content">
-    <h1>Welcome to the Full-Body RoboPianist</h1>
+    <h1>Welcome to the<br>Full-Body RoboPianist</h1>
     <p>
       Available Songs: <br> 
       <span id="fullscreenBtn" class="clickable">My Favorite Things</span><br>
