changed main page

--- a/index.html
+++ b/index.html
@@ -32,18 +32,23 @@
             <div class="about-content">
                 <img src="jerry.png" alt="Profile Picture" class="profile-img">
                 <div class="about-text">
-                    <h3>Hi.</h3>
-                    <h3>My name is DarthAlexus.</h3>
+                    <h3>Hi, my name is DarthAlexus.</h3>
+                    <!--<h3>My name is DarthAlexus.</h3>-->
                     <p>
-                      This website is currently under construction.<br>
+                      This site is currently under construction.<br>
                       <br>
-                      Who knows if there will ever be a real website?
+                      Will there ever be a real website?
                     </p>
+                      Nobody knows.<br> 
+                      Nobody cares.
+                    <!--Who knows if there will ever be a real website?
+                    </p>
+                      Nobody does. But then again: Nobody cares.
                     <p>
                       This is mainly just a little <b>joke project</b> of mine.<br>
                       It's whole purpose - for now - is providing me with a platform <br>
                       to experiment around with some simple web programming stuff.
-                    </p>
+                    </p>-->
                 </div>
             </div>
         </section>
