--- a/jerry.html
+++ b/jerry.html
@@ -18,7 +18,7 @@
             </div>
             <ul class="nav-links">
                 <li><a href="http://darthalexus.com">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="pianist/index.html">RoboPianist</a></li>
                 <li><a href="jerry.html">Jerry</a></li>
                 <!--<li><a href="#connect">Connect</a></li>
                 <li><a href="#contact">Contact</a></li>-->
