change a few things

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
                       <br>
                       Will there ever be a real website?
                     </p>
-                      Nobody knows.<br> 
-                      Nobody cares.
+                      Nobody knows.
                     <!--Who knows if there will ever be a real website?
                     </p>
                       Nobody does. But then again: Nobody cares.
