--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="http://darthalexus.com">Home</a></li>
                 <!--<li><a href="about.html">About</a></li>-->
                 <li><a href="pianist/index.html">RoboPianist</a></li>
-                <li><a href="jerry.html">Jerry</a></li>
+                <!--<li><a href="jerry.html">Jerry</a></li>--<
                 <!--<li><a href="#connect">Connect</a></li>
                 <li><a href="#contact">Contact</a></li>-->
             </ul>
@@ -61,11 +61,11 @@
                 <a href="http://github.com/DarthAlexus96" target="_blank">
                     <img src="github.png" alt="GitHub" class="social-icon">
                 </a>
-                <a href="https://www.sololearn.com/Profile/7072030" target="_blank">
+                <!--<a href="https://www.sololearn.com/Profile/7072030" target="_blank">
                     <img src="sololearn.png" alt="SoloLearn" class="social-icon">
                 </a>
                 <a href="https://www.deviantart.com/darthalexus" target="_blank">
-                    <img src="deviant.png" alt="DeviantArt" class="social-icon">
+                    <img src="deviant.png" alt="DeviantArt" class="social-icon">-->
                 </a>
             </div>
         </section>
