--- a/pianist/index.html
+++ b/pianist/index.html
@@ -38,7 +38,7 @@
     align-items: center;
     text-align: center;
     padding: 0 20px;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0, 0, 0, 0.6); /* darker overlay */
   }
   .clickable {
     cursor: pointer;
@@ -46,6 +46,16 @@
   }
   .clickable + .clickable {
     margin-top: 10px;
+  }
+  .training-status {
+    background: rgba(0, 0, 0, 0.5);
+    padding: 12px 18px;
+    border-radius: 8px;
+    margin: 1.5rem 0;
+    font-size: 1.05rem;
+    line-height: 1.6;
+    color: #ddd;
+    max-width: 500px;
   }
 </style>
 </head>
@@ -58,6 +68,14 @@
   
   <div class="content">
     <h1>Welcome to the<br>Full-Body RoboPianist</h1>
+
+    <div class="training-status">
+      🎹 <strong>Training in Progress</strong><br>
+      The robot is currently practicing new piano pieces.<br>
+      It has already learned others successfully, but those videos aren’t available yet.<br>
+      <em>Improved recordings will be coming soon!</em>
+    </div>
+
     <p>
       Available Songs: <br> 
       <span id="fullscreenBtn" class="clickable">My Favorite Things</span><br>
