--- a/pianist/index.html
+++ b/pianist/index.html
@@ -71,16 +71,21 @@
 
     <div class="training-status">
       🎹 <strong>Training in Progress</strong><br>
-      The robot is currently practicing new piano pieces.<br>
-      It has already learned others successfully, but those videos aren’t available yet.<br>
+      My robot is currently learning new pieces:<br>
+      <span id="fullscreenBtn" class="clickable">My Favorite Things</span><br>
+      <span id="fullscreenBtnTwinkle" class="clickable">Twinkle Twinkle</span><br>
+      <br>
+      It has already learned others successfully,<br> but those videos aren’t available yet.<br>
       <em>Improved recordings will be coming soon!</em>
     </div>
 
+    <!--
     <p>
       Available Songs: <br> 
       <span id="fullscreenBtn" class="clickable">My Favorite Things</span><br>
       <span id="fullscreenBtnTwinkle" class="clickable">Twinkle Twinkle</span>
     </p>
+    -->
   </div>
 
 <script>
