--- a/pianist/index.html
+++ b/pianist/index.html
@@ -71,7 +71,7 @@
 
     <div class="training-status">
       🎹 <strong>Training in Progress</strong><br>
-      My robot is currently learning new pieces:<br>
+      Our robot is currently learning new pieces:<br>
       <span id="fullscreenBtn" class="clickable">My Favorite Things</span><br>
       <span id="fullscreenBtnTwinkle" class="clickable">Twinkle Twinkle</span><br>
       <br>
