--- a/pianist/index.html
+++ b/pianist/index.html
@@ -29,9 +29,6 @@
       background: black;
       z-index: 0;
     }
-    video.fullscreen-contain {
-      object-fit: contain;
-    }
     .overlay {
       position: fixed;
       top: 0;
@@ -51,6 +48,11 @@
       align-items: center;
       text-align: center;
       padding: 0 20px;
+      transition: opacity 0.5s ease-in-out;
+    }
+    .content.hidden {
+      opacity: 0;
+      pointer-events: none;
     }
     h1 {
       font-size: 2.5em;
@@ -87,6 +89,11 @@
       font-size: 0.75em;
       color: rgba(255, 255, 255, 0.6);
     }
+    .footnote {
+      margin-top: 20px;
+      font-size: 0.7em;
+      color: rgba(255, 255, 255, 0.5);
+    }
     #muteToggle {
       position: fixed;
       bottom: 20px;
@@ -99,6 +106,20 @@
       border-radius: 8px;
       cursor: pointer;
       font-size: 16px;
+    }
+    #backButton {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      z-index: 3;
+      background: rgba(0, 0, 0, 0.6);
+      color: white;
+      border: none;
+      padding: 10px 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+      display: none;
     }
   </style>
 </head>
@@ -120,11 +141,7 @@
     </div>
 
     <div class="training-status">
-       <!--
-      🎬 <strong>Watch the robot perform:</strong><br>
-      <span class="clickable" data-src="twinkle_twinkle.mp4">🎹 Twinkle Twinkle (fully learned)</span>-->
-
-      <hr style="margin: 20px 0; width: 60%; border: 0; border-top: 1px solid rgba(255,255,255,0.3);">
+       <hr style="margin: 20px auto; width: 60%; border: 0; border-top: 1px solid rgba(255,255,255,0.3);">
 
       🎹 <strong>Training in Progress</strong><br>
       Our robot is currently learning new pieces:<br>
@@ -143,40 +160,39 @@
         The other videos show the robot <em>still in the process of learning</em>.<br><br>
         <em>Improved and polished recordings will be added soon!</em>
       </div>
+
+      <div class="footnote">
+        The full code for this project will be published soon on GitHub: <a href="https://github.com/DarthAlexus96" target="_blank" style="color: rgba(255, 255, 255, 0.7);">DarthAlexus96</a>
+      </div>
     </div>
   </div>
 
   <button id="muteToggle">🔊 Unmute</button>
+  <button id="backButton">← Back</button>
 
   <script>
     const video = document.getElementById('myVideo');
     const source = document.getElementById('videoSource');
     const muteToggle = document.getElementById('muteToggle');
+    const contentDiv = document.querySelector('.content');
+    const backButton = document.getElementById('backButton');
 
-    const videos = {
-      fullscreenBtnTwinkle: "twinkle_twinkle.mp4",
-      fullscreenBtn1: "my_favorite_things.mp4",
-      fullscreenBtn2: "bach_invention4.mp4",
-      fullscreenBtn3: "tchaikovsky_new_puppet.mp4",
-      fullscreenBtn4: "chopin_prelude.mp4",
-      fullscreenBtn5: "mozart_funeral_march.mp4",
-      fullscreenBtn6: "time_to_pretend.mp4",
-      fullscreenBtn7: "diabelli_sonatina.mp4"
-    };
-
-    function playVideoFullscreen(videoUrl) {
-      source.src = videoUrl;
+    function showContent() {
+      contentDiv.classList.remove('hidden');
+      backButton.style.display = 'none';
+      muteToggle.style.display = 'block';
+      video.muted = true;
+      video.pause();
+      video.currentTime = 0;
+      source.src = "twinkle_twinkle.mp4"; // Reset to default background video
       video.load();
-      video.muted = false;
       video.play();
+    }
 
-      if (video.requestFullscreen) {
-        video.requestFullscreen();
-      } else if (video.webkitRequestFullscreen) {
-        video.webkitRequestFullscreen();
-      } else if (video.msRequestFullscreen) {
-        video.msRequestFullscreen();
-      }
+    function hideContent() {
+      contentDiv.classList.add('hidden');
+      backButton.style.display = 'block';
+      muteToggle.style.display = 'none';
     }
 
     document.querySelectorAll('.clickable').forEach(el => {
@@ -184,18 +200,14 @@
         const newSrc = el.getAttribute('data-src');
         source.src = newSrc;
         video.load();
-        video.play();
         video.muted = false;
+        video.play();
+        hideContent();
       });
     });
 
-    video.addEventListener('fullscreenchange', () => {
-      if (document.fullscreenElement === video) {
-        video.classList.add('fullscreen-contain');
-        video.play();
-      } else {
-        video.classList.remove('fullscreen-contain');
-      }
+    backButton.addEventListener('click', () => {
+      showContent();
     });
 
     muteToggle.addEventListener('click', () => {
@@ -203,8 +215,13 @@
       muteToggle.textContent = video.muted ? '🔊 Unmute' : '🔇 Mute';
       video.volume = video.muted ? 0 : 1.0;
     });
+
+    // Initial state setup
+    document.addEventListener('DOMContentLoaded', () => {
+        showContent();
+    });
+
   </script>
 
 </body>
 </html>
-
