--- a/pianist/index.html
+++ b/pianist/index.html
@@ -8,18 +8,21 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
+      /* Remove height: 100vh; and overflow: hidden; from html, body */
+      height: 100%; /* Use 100% here */
       background: black;
-      overflow: hidden;
       font-family: sans-serif;
       color: white;
+      /* Allow natural scrolling on the body */
+      overflow-y: auto; /* Allow vertical scrolling on the body if content overflows */
+      overflow-x: hidden; /* Prevent horizontal scrolling */
     }
     body {
       position: relative;
-      height: 100vh;
+      /* min-height: 100vh; - We'll apply this to a wrapper for the content if needed */
     }
     video {
-      position: fixed;
+      position: fixed; /* Keep video fixed in background */
       top: 50%;
       left: 50%;
       width: 100vw;
@@ -30,7 +33,7 @@
       z-index: 0;
     }
     .overlay {
-      position: fixed;
+      position: fixed; /* Keep overlay fixed over video */
       top: 0;
       left: 0;
       width: 100vw;
@@ -38,21 +41,27 @@
       background: rgba(0, 0, 0, 0.5);
       z-index: 1;
     }
-    .content {
-      position: relative;
-      z-index: 2;
-      height: 100vh;
+    .content-wrapper { /* New wrapper for content to manage scrolling */
+      position: relative; /* Relative to allow z-index to work */
+      z-index: 2; /* Above video and overlay */
+      min-height: 100vh; /* Ensure it's at least viewport height */
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
       text-align: center;
       padding: 0 20px;
+      padding-bottom: 80px; /* Add padding for buttons at bottom */
+      box-sizing: border-box; /* Include padding in height calculation */
       transition: opacity 0.5s ease-in-out;
+      /* Now, this wrapper will naturally expand and trigger body scroll if content is taller */
     }
-    .content.hidden {
+    .content-wrapper.hidden {
       opacity: 0;
       pointer-events: none;
+      /* When hidden, we might want to also prevent it from taking up space
+         or just let the opacity handle it. Opacity with pointer-events: none
+         is fine as the video is now fullscreen behind it. */
     }
     h1 {
       font-size: 2.5em;
@@ -63,8 +72,8 @@
       padding: 16px 24px;
       max-width: 700px;
       font-size: 0.9em;
-      margin-top: auto;
-      margin-bottom: 40px;
+      margin-top: auto; /* Pushes this section to the bottom */
+      margin-bottom: 0; /* Remove bottom margin here, handled by content-wrapper padding */
     }
     .perform {
       padding: 16px 24px;
@@ -94,11 +103,12 @@
       font-size: 0.7em;
       color: rgba(255, 255, 255, 0.5);
     }
+    /* Buttons should be fixed to the viewport, not scroll with content */
     #muteToggle {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      z-index: 3;
+      z-index: 4; /* Ensure buttons are above content-wrapper */
       background: rgba(0, 0, 0, 0.6);
       color: white;
       border: none;
@@ -111,7 +121,7 @@
       position: fixed;
       top: 20px;
       left: 20px;
-      z-index: 3;
+      z-index: 4; /* Ensure buttons are above content-wrapper */
       background: rgba(0, 0, 0, 0.6);
       color: white;
       border: none;
@@ -132,53 +142,52 @@
 
   <div class="overlay"></div>
 
-  <div class="content">
-    <h1>Welcome to the<br>Full-Body RoboPianist</h1>
-    
-    <div class="perform">
-    <h3>Watch the robot perform:</h3>
-    <span class="clickable" data-src="twinkle_twinkle.mp4"> 🌠 Twinkle Twinkle (fully learned)</span>
-    </div>
-
-    <div class="training-status">
-       <hr style="margin: 20px auto; width: 60%; border: 0; border-top: 1px solid rgba(255,255,255,0.3);">
-
-      🎹 <strong>Training in Progress</strong><br>
-      Our robot is currently learning new pieces:<br>
-      <span class="clickable" data-src="my_favorite_things.mp4">My Favorite Things</span>
-      <span class="clickable" data-src="bach_invention4.mp4">Bach – Invention No. 4</span>
-      <span class="clickable" data-src="tchaikovsky_new_puppet.mp4">Tchaikovsky – New Puppet</span>
-      <span class="clickable" data-src="chopin_prelude.mp4">Chopin – Prelude</span>
-      <span class="clickable" data-src="mozart_funeral_march.mp4">Mozart – Funeral March</span>
-      <span class="clickable" data-src="time_to_pretend.mp4">MGMT – Time to Pretend</span>
-      <span class="clickable" data-src="diabelli_sonatina.mp4">Diabelli – Sonatina</span>
-
-      <div class="note">
-        🧠 <strong>Please note:</strong><br>
-        Only <em>Twinkle Twinkle</em> shows a complete performance<br>
-        after the robot has fully mastered the piece.<br>
-        The other videos show the robot <em>still in the process of learning</em>.<br><br>
-        <em>Improved and polished recordings will be added soon!</em>
+  <div class="content-wrapper">
+    <div class="content"> <h1>Welcome to the<br>Full-Body RoboPianist</h1>
+      
+      <div class="perform">
+        <h3>Watch the robot perform:</h3>
+        <span class="clickable" data-src="twinkle_twinkle.mp4"> 🌠 Twinkle Twinkle (fully learned)</span>
       </div>
 
-      <div class="footnote">
-        The full code for this project will be published soon on GitHub: <a href="https://github.com/DarthAlexus96" target="_blank" style="color: rgba(255, 255, 255, 0.7);">DarthAlexus96</a>
-      </div>
-    </div>
-  </div>
+      <div class="training-status">
+         <hr style="margin: 20px auto; width: 60%; border: 0; border-top: 1px solid rgba(255,255,255,0.3);">
 
-  <button id="muteToggle">🔊 Unmute</button>
+        🎹 <strong>Training in Progress</strong><br>
+        Our robot is currently learning new pieces:<br>
+        <span class="clickable" data-src="my_favorite_things.mp4">My Favorite Things</span>
+        <span class="clickable" data-src="bach_invention4.mp4">Bach – Invention No. 4</span>
+        <span class="clickable" data-src="tchaikovsky_new_puppet.mp4">Tchaikovsky – New Puppet</span>
+        <span class="clickable" data-src="chopin_prelude.mp4">Chopin – Prelude</span>
+        <span class="clickable" data-src="mozart_funeral_march.mp4">Mozart – Funeral March</span>
+        <span class="clickable" data-src="time_to_pretend.mp4">MGMT – Time to Pretend</span>
+        <span class="clickable" data-src="diabelli_sonatina.mp4">Diabelli – Sonatina</span>
+
+        <div class="note">
+          🧠 <strong>Please note:</strong><br>
+          Only <em>Twinkle Twinkle</em> shows a complete performance<br>
+          after the robot has fully mastered the piece.<br>
+          The other videos show the robot <em>still in the process of learning</em>.<br><br>
+          <em>Improved and polished recordings will be added soon!</em>
+        </div>
+
+        <div class="footnote">
+          The full code for this project will be published soon on GitHub: <a href="https://github.com/DarthAlexus96" target="_blank" style="color: rgba(255, 255, 255, 0.7);">DarthAlexus96</a>
+        </div>
+      </div>
+    </div> </div> <button id="muteToggle">🔊 Unmute</button>
   <button id="backButton">← Back</button>
 
   <script>
     const video = document.getElementById('myVideo');
     const source = document.getElementById('videoSource');
     const muteToggle = document.getElementById('muteToggle');
-    const contentDiv = document.querySelector('.content');
+    // Changed to target the new wrapper
+    const contentWrapperDiv = document.querySelector('.content-wrapper');
     const backButton = document.getElementById('backButton');
 
     function showContent() {
-      contentDiv.classList.remove('hidden');
+      contentWrapperDiv.classList.remove('hidden'); // Target the wrapper
       backButton.style.display = 'none';
       muteToggle.style.display = 'block';
       video.muted = true;
@@ -190,7 +199,7 @@
     }
 
     function hideContent() {
-      contentDiv.classList.add('hidden');
+      contentWrapperDiv.classList.add('hidden'); // Target the wrapper
       backButton.style.display = 'block';
       muteToggle.style.display = 'none';
     }
@@ -214,6 +223,20 @@
       video.muted = !video.muted;
       muteToggle.textContent = video.muted ? '🔊 Unmute' : '🔇 Mute';
       video.volume = video.muted ? 0 : 1.0;
+    });
+
+    // Handle fullscreen changes (existing functionality, but `fullscreen-contain` might not be necessary
+    // with object-fit:cover on the fixed video, as the video itself will fill the screen.)
+    // Keeping it for now as it doesn't hurt.
+    video.addEventListener('fullscreenchange', () => {
+      if (document.fullscreenElement === video) {
+        // This part might not be hit if video is fixed to viewport
+        // and doesn't explicitly go fullscreen by itself but the browser goes fullscreen.
+        video.classList.add('fullscreen-contain');
+        video.play();
+      } else {
+        video.classList.remove('fullscreen-contain');
+      }
     });
 
     // Initial state setup
