--- a/pianist/index.html
+++ b/pianist/index.html
@@ -8,21 +8,18 @@
     html, body {
       margin: 0;
       padding: 0;
-      /* Remove height: 100vh; and overflow: hidden; from html, body */
-      height: 100%; /* Use 100% here */
+      height: 100%;
       background: black;
       font-family: sans-serif;
       color: white;
-      /* Allow natural scrolling on the body */
-      overflow-y: auto; /* Allow vertical scrolling on the body if content overflows */
-      overflow-x: hidden; /* Prevent horizontal scrolling */
+      overflow-y: auto;
+      overflow-x: hidden;
     }
     body {
       position: relative;
-      /* min-height: 100vh; - We'll apply this to a wrapper for the content if needed */
     }
     video {
-      position: fixed; /* Keep video fixed in background */
+      position: fixed;
       top: 50%;
       left: 50%;
       width: 100vw;
@@ -33,7 +30,7 @@
       z-index: 0;
     }
     .overlay {
-      position: fixed; /* Keep overlay fixed over video */
+      position: fixed;
       top: 0;
       left: 0;
       width: 100vw;
@@ -41,27 +38,23 @@
       background: rgba(0, 0, 0, 0.5);
       z-index: 1;
     }
-    .content-wrapper { /* New wrapper for content to manage scrolling */
-      position: relative; /* Relative to allow z-index to work */
-      z-index: 2; /* Above video and overlay */
-      min-height: 100vh; /* Ensure it's at least viewport height */
+    .content-wrapper {
+      position: relative;
+      z-index: 2;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
       text-align: center;
       padding: 0 20px;
-      padding-bottom: 80px; /* Add padding for buttons at bottom */
-      box-sizing: border-box; /* Include padding in height calculation */
+      padding-bottom: 80px;
+      box-sizing: border-box;
       transition: opacity 0.5s ease-in-out;
-      /* Now, this wrapper will naturally expand and trigger body scroll if content is taller */
     }
     .content-wrapper.hidden {
       opacity: 0;
       pointer-events: none;
-      /* When hidden, we might want to also prevent it from taking up space
-         or just let the opacity handle it. Opacity with pointer-events: none
-         is fine as the video is now fullscreen behind it. */
     }
     h1 {
       font-size: 2.5em;
@@ -72,8 +65,8 @@
       padding: 16px 24px;
       max-width: 700px;
       font-size: 0.9em;
-      margin-top: auto; /* Pushes this section to the bottom */
-      margin-bottom: 0; /* Remove bottom margin here, handled by content-wrapper padding */
+      margin-top: auto;
+      margin-bottom: 0;
     }
     .perform {
       padding: 16px 24px;
@@ -103,12 +96,10 @@
       font-size: 0.7em;
       color: rgba(255, 255, 255, 0.5);
     }
-    /* Buttons should be fixed to the viewport, not scroll with content */
-    #muteToggle {
+    /* Common button styles */
+    .control-button {
       position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 4; /* Ensure buttons are above content-wrapper */
+      z-index: 4;
       background: rgba(0, 0, 0, 0.6);
       color: white;
       border: none;
@@ -117,18 +108,18 @@
       cursor: pointer;
       font-size: 16px;
     }
+    #muteToggle {
+      bottom: 20px;
+      right: 20px;
+    }
+    #fullScreenToggle { /* New style for fullscreen button */
+      bottom: 20px;
+      right: 120px; /* Position to the left of muteToggle */
+      display: none; /* Hidden by default */
+    }
     #backButton {
-      position: fixed;
       top: 20px;
       left: 20px;
-      z-index: 4; /* Ensure buttons are above content-wrapper */
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      border: none;
-      padding: 10px 16px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 16px;
       display: none;
     }
   </style>
@@ -143,7 +134,8 @@
   <div class="overlay"></div>
 
   <div class="content-wrapper">
-    <div class="content"> <h1>Welcome to the<br>Full-Body RoboPianist</h1>
+    <div class="content">
+      <h1>Welcome to the<br>Full-Body RoboPianist</h1>
       
       <div class="perform">
         <h3>Watch the robot perform:</h3>
@@ -175,33 +167,38 @@
           The full code for this project will be published soon on GitHub: <a href="https://github.com/DarthAlexus96" target="_blank" style="color: rgba(255, 255, 255, 0.7);">DarthAlexus96</a>
         </div>
       </div>
-    </div> </div> <button id="muteToggle">🔊 Unmute</button>
-  <button id="backButton">← Back</button>
+    </div>
+  </div>
+
+  <button id="muteToggle" class="control-button">🔊 Unmute</button>
+  <button id="fullScreenToggle" class="control-button">⤢ Fullscreen</button> <button id="backButton" class="control-button">← Back</button>
 
   <script>
     const video = document.getElementById('myVideo');
     const source = document.getElementById('videoSource');
     const muteToggle = document.getElementById('muteToggle');
-    // Changed to target the new wrapper
+    const fullScreenToggle = document.getElementById('fullScreenToggle'); // Get new button
     const contentWrapperDiv = document.querySelector('.content-wrapper');
     const backButton = document.getElementById('backButton');
 
     function showContent() {
-      contentWrapperDiv.classList.remove('hidden'); // Target the wrapper
+      contentWrapperDiv.classList.remove('hidden');
       backButton.style.display = 'none';
       muteToggle.style.display = 'block';
+      fullScreenToggle.style.display = 'none'; // Hide fullscreen button
       video.muted = true;
       video.pause();
       video.currentTime = 0;
-      source.src = "twinkle_twinkle.mp4"; // Reset to default background video
+      source.src = "twinkle_twinkle.mp4";
       video.load();
       video.play();
     }
 
     function hideContent() {
-      contentWrapperDiv.classList.add('hidden'); // Target the wrapper
+      contentWrapperDiv.classList.add('hidden');
       backButton.style.display = 'block';
-      muteToggle.style.display = 'none';
+      muteToggle.style.display = 'none'; // Hide mute button when video is playing
+      fullScreenToggle.style.display = 'block'; // Show fullscreen button
     }
 
     document.querySelectorAll('.clickable').forEach(el => {
@@ -225,19 +222,29 @@
       video.volume = video.muted ? 0 : 1.0;
     });
 
-    // Handle fullscreen changes (existing functionality, but `fullscreen-contain` might not be necessary
-    // with object-fit:cover on the fixed video, as the video itself will fill the screen.)
-    // Keeping it for now as it doesn't hurt.
-    video.addEventListener('fullscreenchange', () => {
-      if (document.fullscreenElement === video) {
-        // This part might not be hit if video is fixed to viewport
-        // and doesn't explicitly go fullscreen by itself but the browser goes fullscreen.
-        video.classList.add('fullscreen-contain');
-        video.play();
-      } else {
-        video.classList.remove('fullscreen-contain');
+    // New Fullscreen Toggle functionality
+    fullScreenToggle.addEventListener('click', () => {
+      if (video.requestFullscreen) {
+        video.requestFullscreen();
+      } else if (video.webkitRequestFullscreen) { /* Safari */
+        video.webkitRequestFullscreen();
+      } else if (video.msRequestFullscreen) { /* IE11 */
+        video.msRequestFullscreen();
       }
     });
+
+    // Handle fullscreen changes
+    // This listener is useful if the user exits fullscreen via ESC key etc.
+    document.addEventListener('fullscreenchange', () => {
+        if (!document.fullscreenElement) { // If not in fullscreen mode
+            // You might want to decide if you want to show content or remain in video view
+            // For now, if exiting fullscreen, we will show content (as if "Back" was pressed)
+            // Or you could just keep the video playing in its current view.
+            // Let's keep the video playing in its normal view if fullscreen is exited without pressing 'Back'.
+            // No action needed here unless you want to explicitly hide contentWrapperDiv or change buttons.
+        }
+    });
+
 
     // Initial state setup
     document.addEventListener('DOMContentLoaded', () => {
