--- a/pianist/index.html
+++ b/pianist/index.html
@@ -176,7 +176,7 @@
     </div> <!-- End of original 'content' div -->
   </div> <!-- End of new 'content-wrapper' div -->
 
-  <button id="muteToggle" class="control-button">🔇</button>
+  <button id="muteToggle" class="control-button">🔊</button>
   <button id="fullScreenToggle" class="control-button">⛶</button>
   <button id="backButton" class="control-button">← Back</button>
 
